# FALSH-TOOL

./: .gitignore  Cargo.toml  JOURNEY.md  README.md  TynShop.adx  copy_mainform.py  data.ini
.github/workflows/: build-bridge.yml
MZA_TUNER_FLASH_2026/: MZA_TUNER_FLASH_2026.csproj
MZA_TUNER_FLASH_2026/-PrivateImplementationDetails-{68F2EF73-/: EC2D41B1-A2F9-4664-90D8-86645EE2E753.cs
MZA_TUNER_FLASH_2026/Properties/: AssemblyInfo.cs
MZA_TUNER_FLASH_2026/ns0/: Attribute0.cs  Attribute1.cs  Attribute2.cs  Class16.cs  Class17.cs  Class18.cs  Class19.cs  Class20.cs  Class21.cs  Class22.cs  Class23.cs  Class24.cs  Class25.cs  Class26.cs  Class27.cs  Class28.cs  Class29.cs  Class30.cs  Class31.cs  Class32.cs  Class33.cs  Class34.cs  Class35.cs  Class36.cs  Class37.cs  Class38.cs  Class39.cs  Class40.cs  Class41.cs  Class42.cs  Class43.cs  Class44.cs  Class45.cs  Class46.cs  Class47.cs  Class48.cs  Class49.cs  Class50.cs  Class51.cs  Class52.cs  (+39 more)
MZA_TUNER_FLASH_2026/ns1/: Class100.cs  Class101.cs  Class102.cs  Class103.cs  Class104.cs  Class105.cs  Class106.cs  Class107.cs  Class108.cs  Class109.cs  Class110.cs  Class111.cs  Class112.cs  Class113.cs  Class114.cs  Class115.cs  Class116.cs  Class117.cs  Class118.cs  Class119.cs  Class120.cs  Class121.cs  Class122.cs  Class155.cs  Class158.cs  Class79.cs  Class80.cs  Class81.cs  Class82.cs  Class83.cs  Class84.cs  Class85.cs  Class86.cs  Class87.cs  Class88.cs  Class89.cs  Class90.cs  Class91.cs  Class92.cs  Class93.cs  (+46 more)
MZA_TUNER_FLASH_2026/ns2/: Class164.cs  Class165.cs  Class166.cs  Class167.cs  Class168.cs  Class169.cs  Class170.cs  Class171.cs  Class172.cs  Class173.cs  Class174.cs  Class175.cs  Class176.cs  Class177.cs  Class178.cs  Class179.cs  Class180.cs  Class181.cs  Class182.cs  Class183.cs  Class184.cs  Class185.cs  Class186.cs  Class187.cs  Class188.Designer.cs  Class188.cs  Class188.settings  Class189.cs  Class190.cs  GAttribute1.cs  GClass18.cs  GClass19.cs  GForm16.Designer.cs  GForm16.cs
app/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: bridge_client.rs  commands.rs  eeprom.rs  ftdi.rs  kline_log.rs  lib.rs  libusb_ftdi.rs  livedata.rs  livedata_session.rs  main.rs  transport.rs
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/database/: page.tsx
app/src/app/dtc/: page.tsx
app/src/app/ecu/: page.tsx
app/src/components/: animated-background.tsx  app-shell.tsx  connection-panel.tsx  kline-log-bridge.tsx  kline-log-panel.tsx  livedata-alerts.tsx  livedata-pump.tsx  navbar.tsx  sound-sync.tsx  splash-screen.tsx  theme-provider.tsx  toast.tsx
app/src/lib/: checksum.ts  connection.ts  ecu-lookup.ts  history.ts  livedata.ts  log.ts  settings.ts  sounds.ts  tauri.ts  use-smoothed-values.ts  utils.ts
app/tools/: make_icon.ps1
bridge/: Cargo.toml  DEPLOY.md  README.md  test-client.ps1
bridge/src/: eeprom.rs  libusb_ftdi.rs  livedata.rs  main.rs  proto.rs  server.rs  transport.rs
core/: Cargo.toml  README.md  package-lock.json
core/src/: crypto.rs  dtc.rs  ecu_db.rs  kline.rs  lib.rs  main.rs  xdf.rs
docs/: ARCHITECTURE.md  CLASS_INDEX.md  FILE_RENAMES.md  README.md  honda_scan.txt  monitor_strings_all.txt
docs/decompiled/: AssemblyInfo_Extras.cs  Form3_AcgEcuToBin.Designer.cs  Form3_AcgEcuToBin.cs  Form4_XdfAdxBreaker.Designer.cs  Form4_XdfAdxBreaker.cs  Form5_OpenPassword.Designer.cs  Form5_OpenPassword.cs  Form_EepromTool.Designer.cs  Form_EepromTool.cs  Form_LicenseKey.Designer.cs  Form_LicenseKey.cs  Form_Update.Designer.cs  Form_Update.cs  License_Secrets.cs  MZA_TUNER_FLASH_2026.12.cs  MZA_TUNER_FLASH_2026.13.cs  MZA_TUNER_FLASH_2026.14.cs  MZA_TUNER_FLASH_2026.15.cs  MZA_TUNER_FLASH_2026.16.cs  MZA_TUNER_FLASH_2026.17.cs  MZA_TUNER_FLASH_2026.18.cs  MZA_TUNER_FLASH_2026.19.cs  MZA_TUNER_FLASH_2026.2.cs  MZA_TUNER_FLASH_2026.20.cs  MZA_TUNER_FLASH_2026.21.cs  MZA_TUNER_FLASH_2026.22.cs  MZA_TUNER_FLASH_2026.23.cs  MZA_TUNER_FLASH_2026.24.cs  MZA_TUNER_FLASH_2026.25.cs  MZA_TUNER_FLASH_2026.26.cs  MZA_TUNER_FLASH_2026.27.cs  MZA_TUNER_FLASH_2026.28.cs  MZA_TUNER_FLASH_2026.29.cs  MZA_TUNER_FLASH_2026.30.cs  MZA_TUNER_FLASH_2026.31.cs  MZA_TUNER_FLASH_2026.32.cs  MZA_TUNER_FLASH_2026.33.cs  MZA_TUNER_FLASH_2026.34.cs  MZA_TUNER_FLASH_2026.35.cs  MZA_TUNER_FLASH_2026.36.cs  (+18 more)
docs/decompiled/MZA_TUNER_FLASH_2026/: MZA_TUNER_FLASH_2026.csproj  ​.2.cs  ​.3.cs  ​.cs  ‐.2.cs  ‐.3.cs  ‐.cs  ‑.2.cs  ‑.3.cs  ‑.cs  ‒.2.cs  ‒.3.cs  ‒.cs  –.2.cs  –.3.cs  –.cs  —.2.cs  —.3.cs  —.cs  ―.2.cs  ―.3.cs  ―.cs  •.2.cs  •.3.cs  •.cs  ․.2.cs  ․.3.cs  ․.cs  ‥.2.cs  ‥.3.cs  ‥.cs  ‧.2.cs  ‧.3.cs  ‧.cs  ‪.2.cs  ‪.3.cs  ‪.cs  ‫.2.cs  ‫.3.cs  ‫.cs  (+102 more)
docs/deobf-tools/: apply_renames.ps1  apply_renames_v2.ps1  diag.ps1  dump_metadata.ps1  extract_strings.ps1  finalize.ps1  generate_class_index.ps1  metadata.json  rename_log.txt  rename_map.json  rewrite_source.ps1  strings.json  strings.txt
tools/extract_strings/: Cargo.toml
tools/extract_strings/src/: main.rs
tools/honda_scanner/: Cargo.toml
tools/honda_scanner/src/: main.rs
(+14 files in other folders)
